* 0.6.4:
  - Improved the manpage: documented the long options, added examples, links, ...
  - Reorganized code of the archive-io thread (split archive into archreader and archwriter)
  - Fixed critical bug: integer overflow for "u16 headerlen" when sum of attributes size > 65535
  - Introduced new fileformat: "FsArCh_002", but old format "FsArCh_001" is also supported
* 0.6.3 (2009-12-28):
  - Dont fail when e2fsck returns 1 in extfs_mkfs() since it means the filesystem has been fixed
  - Extended options (stride and stripe_width), max_mount_count, check_interval are now preserved for ext{2,3,4}
  - Display the percentage of the operation which has been completed when verbose >= 1 (sort of progress bar)
  - Display information about physical disks as well as partitions in "fsarchiver probe <mode>"
  - Fixed bug with archive splitting: the split size was sometimes incorrect due to an integer overflow
  - Added option "--exclude/-e <pattern>" to exclude files/dirs. It works for both archiving and extracting.
  - Added support for long options (--option) using getopt_long
  - Removed the dependency on "which" to find the path to a program
  - Accept all libgcrypt versions >= 1.2.4 at runtime in gcry_check_version
  - Using functions from libuuid instead of duplicating code in uuid.[ch]
* 0.6.2 (2009-12-08):
  - Dynamic memory allocation for ntfs specific extended-attributes in create.c
  - Fix related the the ntfs attributes when lgetxattr returns a negative size
  - Saves the name of the original device where the filesystem is stored (FSYSHEADKEY_ORIGDEV)
  - Fixed enable options in configure: "--enable-xxx" had the opposite effect (Thanks to horhe)
  - Exit with an error if the user wants to use a compression level which is not supported (Thanks to mbiebl)
  - Fixed crash when mount fails (mntbyfsa was set to true and not clear if mount fails)
  - Fixed code for ntfs symlinks (they have to be recreated as normal files and dirs + special attributes)